# soupawhisper

./: CLAUDE.md  README.md  config.example.ini  dictate.py  install.sh  pyproject.toml
