[project]
name = "soupawhisper"
version = "0.1.0"
description = "Push-to-talk voice dictation for Linux using faster-whisper"
authors = [{ name = "Kyle", email = "kyle@ksred.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["whisper", "dictation", "voice", "transcription", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "evdev>=1.7.0",
]

[project.urls]
Repository = "https://github.com/ksred/soupawhisper"

[tool.hatch.build.targets.wheel]
only-include = ["dictate.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
